[gd_scene load_steps=15 format=3 uid="uid://dg72osmd0f6bx"]

[ext_resource type="Script" path="res://mice/mouse.gd" id="1_veisd"]
[ext_resource type="Script" path="res://mice/modules/visuals.gd" id="2_rmt6m"]
[ext_resource type="Texture2D" uid="uid://7orui6wgiwbq" path="res://game_loop/placeholder.png" id="3_gtetu"]
[ext_resource type="Script" path="res://mice/modules/magnify_tracker.gd" id="3_ymeri"]
[ext_resource type="Script" path="res://mice/modules/mover.gd" id="4_b10rd"]
[ext_resource type="Script" path="res://mice/modules/body.gd" id="5_bqf7s"]
[ext_resource type="AudioStream" uid="uid://chjjpg18tkn2e" path="res://mice/footsteps/footsteps.ogg" id="6_jxows"]
[ext_resource type="Script" path="res://mice/modules/bite_giver.gd" id="7_85545"]
[ext_resource type="Script" path="res://mice/modules/clue_giver.gd" id="7_ghbtm"]
[ext_resource type="Resource" uid="uid://bp2o8vkt7cnsp" path="res://map/data/map_data.tres" id="8_knvtm"]
[ext_resource type="AudioStream" uid="uid://crppoeexv48sd" path="res://mice/bite.ogg" id="10_q4row"]
[ext_resource type="PackedScene" uid="uid://dobfgpnhx4r5x" path="res://mice/footsteps/footsteps.tscn" id="12_4jbli"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bl0id"]
size = Vector2(124.689, 25.7992)

[sub_resource type="CircleShape2D" id="CircleShape2D_q23ha"]
radius = 68.1836

[node name="Mouse" type="CharacterBody2D" groups=["Mice"]]
position = Vector2(537, 473)
collision_mask = 0
script = ExtResource("1_veisd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.498779, -20.1004)
shape = SubResource("RectangleShape2D_bl0id")

[node name="Visuals" type="Node2D" parent="." node_paths=PackedStringArray("body")]
script = ExtResource("2_rmt6m")
body = NodePath("../Body")

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
position = Vector2(0, -18.9853)
scale = Vector2(1, 0.328354)
texture = ExtResource("3_gtetu")

[node name="MagnifyTracker" type="Node2D" parent="." node_paths=PackedStringArray("body", "mover")]
script = ExtResource("3_ymeri")
body = NodePath("../Body")
mover = NodePath("../Mover")

[node name="Mover" type="Node2D" parent="."]
script = ExtResource("4_b10rd")

[node name="Area2D" type="Area2D" parent="Mover"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mover/Area2D"]
shape = SubResource("CircleShape2D_q23ha")

[node name="Body" type="Node2D" parent="." node_paths=PackedStringArray("mover", "col_shape")]
script = ExtResource("5_bqf7s")
mover = NodePath("../Mover")
col_shape = NodePath("../CollisionShape2D")

[node name="BiteGiver" type="Node2D" parent="." node_paths=PackedStringArray("mover")]
script = ExtResource("7_85545")
mover = NodePath("../Mover")

[node name="ClueGiver" type="Node2D" parent="." node_paths=PackedStringArray("body", "mover", "bite_giver")]
script = ExtResource("7_ghbtm")
body = NodePath("../Body")
mover = NodePath("../Mover")
bite_giver = NodePath("../BiteGiver")
footsteps_scene = ExtResource("12_4jbli")
map_data = ExtResource("8_knvtm")

[node name="AudioFootsteps" type="AudioStreamPlayer2D" parent="ClueGiver"]
stream = ExtResource("6_jxows")
volume_db = -5.0
max_distance = 5000.0

[node name="AudioBite" type="AudioStreamPlayer2D" parent="ClueGiver"]
stream = ExtResource("10_q4row")
volume_db = -5.0
max_distance = 5000.0

[node name="Timer" type="Timer" parent="ClueGiver"]
one_shot = true

[connection signal="body_entered" from="Mover/Area2D" to="Mover" method="_on_area_2d_body_entered"]
